fix some spacing and mobile view

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,9 +46,5 @@ body {
 }
 
 :root {
-  font-size: 16px;
-  --background-color: #000;
-  --text-color: #fff;
-  --text-color-dark: rgba(255, 255, 255, 0.64);
-  --text-color-darker: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
 }
